@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.covenant" version="1.1.12" name="Covenant" provider-name="Covenant">
+<addon id="plugin.video.covenant" version="1.1.13" name="Covenant" provider-name="Covenant">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.covenant.artwork" version="1.0.0" />
@@ -28,6 +28,6 @@
     			<screenshot>resources/screenshots/screenshot-02.jpg</screenshot>
     			<screenshot>resources/screenshots/screenshot-03.jpg</screenshot>
 		</assets>
-		<news>[B]1.1.3[/B][CR]Code cosmetics</news>
+		<news>[B]1.1.13[/B][CR]Code cosmetics</news>
 	</extension>
 </addon>
